k8s/backend-deployment-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"backend","namespace":"2tier-microservice"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"backend"}},"template":{"metadata":{"labels":{"app":"backend"}},"spec":{"containers":[{"env":[{"name":"DJANGO_SECRET_KEY","valueFrom":{"secretKeyRef":{"key":"DJANGO_SECRET_KEY","name":"backend-secret"}}},{"name":"DB_NAME","value":"django_db"},{"name":"DB_USER","value":"django_user"},{"name":"DB_PASSWORD","valueFrom [...]
  creationTimestamp: "2025-05-16T17:43:52Z"
  generation: 1
  name: backend
  namespace: 2tier-microservice
  resourceVersion: "124185"
  uid: 1b5fc584-b01c-44f1-b680-4e314a3296ad
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend
    spec:
      containers:
      - env:
        - name: DJANGO_SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: DJANGO_SECRET_KEY
              name: backend-secret
        - name: DB_NAME
          value: django_db
        - name: DB_USER
          value: django_user
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DB_PASSWORD
              name: backend-secret
        - name: DB_HOST
          value: postgres
        - name: DB_PORT
          value: "5432"
        - name: DJANGO_SUPERUSER_USERNAME
          valueFrom:
            secretKeyRef:
              key: DJANGO_SUPERUSER_USERNAME
              name: backend-secret
        - name: DJANGO_SUPERUSER_EMAIL
          valueFrom:
            secretKeyRef:
              key: DJANGO_SUPERUSER_EMAIL
              name: backend-secret
        - name: DJANGO_SUPERUSER_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DJANGO_SUPERUSER_PASSWORD
              name: backend-secret
        image: rashed271202/2tier-backend:latest
        imagePullPolicy: Always
        name: backend
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-05-16T17:43:52Z"
    lastUpdateTime: "2025-05-16T17:45:21Z"
    message: ReplicaSet "backend-7d886fdd6f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-05-16T19:59:48Z"
    lastUpdateTime: "2025-05-16T19:59:48Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
